--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -12,6 +12,17 @@
   100% 
     opacity: 1
 
+.img-a 
+  display: block
+  margin: auto
+
+.img-t
+  width: auto
+  height: auto
+
+.banner-principal__img
+  width: 400px !important    
+
 .banner-principal__img 
   padding-top: 0rem !important
   padding-bottom: 0rem !important
@@ -234,3 +245,7 @@
 
 .color-white
   color: #fff !important   
+
+.bg8
+  background-color: #D2F3F8 
+  border-radius: 20px
